--- a/boot/src/main/resources/application.properties
+++ b/boot/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=boot312
 server.port=8080
 spring.datasource.username=root
 spring.datasource.password=ural20151
-spring.datasource.url=jdbc:mysql://localhost:3306/security_db
+spring.datasource.url=jdbc:mysql://localhost:3306/security_db2
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.show_sql=true
