--- a/boot/src/main/resources/application.properties
+++ b/boot/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=boot313
+spring.application.name=boot314
 server.port=8080
 spring.datasource.username=root
 spring.datasource.password=ural20151
@@ -10,3 +10,8 @@ spring.mvc.hiddenmethod.filter.enabled=true
 logging.level.org.springframework=DEBUG
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
